[gd_scene load_steps=18 format=3 uid="uid://bh4cmg1gk2fmf"]

[ext_resource type="Script" uid="uid://doyaokjn1138s" path="res://scripts/designer/ShipDesigner.gd" id="1"]
[ext_resource type="Script" uid="uid://6tyxpgwy7jot" path="res://scripts/designer/ShipGrid.gd" id="1_grid"]
[ext_resource type="PackedScene" path="res://scenes/designer/components/RoomPalettePanel.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/designer/components/ShipStatusPanel.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/designer/components/SynergyGuidePanel.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b3vn8y4qxc7h2" path="res://scenes/designer/components/TemplateNameDialog.tscn" id="5_template_name"]
[ext_resource type="PackedScene" uid="uid://cc7qm3y5r8vph" path="res://scenes/designer/components/TemplateListPanel.tscn" id="6_template_list"]
[ext_resource type="PackedScene" uid="uid://cq8m4x7savph" path="res://scenes/designer/components/ShipStatsPanel.tscn" id="7_ship_stats"]
[ext_resource type="PackedScene" path="res://scenes/mission/EnemySetupPanel.tscn" id="9_enemy_setup"]
[ext_resource type="Theme" path="res://assets/themes/blueprint_theme.tres" id="10_blueprint_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_budget"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.290196, 0.886275, 0.886275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_overlay_off"]
bg_color = Color(0.3, 0.3, 0.3, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clear_normal"]
bg_color = Color(0.886275, 0.290196, 0.290196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clear_hover"]
bg_color = Color(1, 0.415686, 0.415686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_launch_normal"]
bg_color = Color(0.172549, 0.290196, 0.54902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_launch_hover"]
bg_color = Color(0.227451, 0.415686, 0.792157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_launch_disabled"]
bg_color = Color(0.298039, 0.298039, 0.298039, 1)

[node name="ShipDesigner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_blueprint_theme")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.039215688, 0.08627451, 0.15686275, 1)

[node name="HeaderBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -1.0
offset_bottom = 119.0
grow_horizontal = 2
color = Color(0.039215688, 0.08627451, 0.15686275, 1)

[node name="HeaderSeparatorLine" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 120.0
offset_bottom = 121.0
grow_horizontal = 2
color = Color(0.290196, 0.886275, 0.886275, 0.2)

[node name="SchematicViewLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 32.0
offset_top = 15.0
offset_right = 632.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(0.290196, 0.886275, 0.886275, 1)
theme_override_font_sizes/font_size = 12
text = "SCHEMATIC VIEW"
vertical_alignment = 1

[node name="Title" type="Label" parent="."]
layout_mode = 1
offset_left = 32.0
offset_top = 32.0
offset_right = 632.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "VESSEL DESIGN BLUEPRINT"
vertical_alignment = 1

[node name="ClassificationLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 32.0
offset_top = 75.0
offset_right = 632.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0.290196, 0.886275, 0.886275, 1)
theme_override_font_sizes/font_size = 13
text = "CLASSIFICATION: CRUISER • GRID: 8×6"
vertical_alignment = 1

[node name="GridInstructions" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -140.0
offset_right = 300.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.667, 0.667, 0.667, 1)
theme_override_font_sizes/font_size = 14
text = "LEFT-CLICK: Place component | RIGHT-CLICK: Remove | R: Rotate"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BudgetPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 18.0
offset_right = -40.0
offset_bottom = 105.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_budget")

[node name="ResourceAllocationLabel" type="Label" parent="BudgetPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -240.0
offset_top = 2.0
offset_bottom = 20.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.290196, 0.886275, 0.886275, 1)
theme_override_font_sizes/font_size = 12
text = "RESOURCE ALLOCATION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BudgetLabel" type="Label" parent="BudgetPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "0 / 30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BudgetProgressBar" type="ProgressBar" parent="BudgetPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 48.0
offset_right = -10.0
offset_bottom = 58.0
grow_horizontal = 2
max_value = 30.0
show_percentage = false

[node name="RemainingLabel" type="Label" parent="BudgetPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 58.0
offset_bottom = 72.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.667, 0.667, 0.667, 1)
theme_override_font_sizes/font_size = 11
text = "Remaining: 30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerOverlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1085.0
offset_top = 1003.0
offset_right = -885.0
offset_bottom = 1053.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_overlay_off")
text = "OVERLAY: OFF"

[node name="HullTypeDropdown" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -486.0
offset_top = 1004.0
offset_right = -306.0
offset_bottom = 1054.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16

[node name="HullOverlayToggle" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -493.0
offset_top = 909.0
offset_right = -338.0
offset_bottom = 959.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_overlay_off")
text = "SHOW HULL"

[node name="ShipStatsPanel" parent="." instance=ExtResource("7_ship_stats")]
layout_mode = 0
offset_left = 1618.0
offset_top = 147.0
offset_right = 1898.0
offset_bottom = 447.0

[node name="RoomPalettePanel" parent="." instance=ExtResource("2")]
layout_mode = 0
offset_left = 32.0
offset_top = 153.0
offset_right = 372.0
offset_bottom = 753.0

[node name="ShipStatusPanel" parent="." instance=ExtResource("3")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -322.0
offset_top = -599.0
offset_right = -22.0
offset_bottom = -399.0
grow_horizontal = 0
grow_vertical = 0

[node name="SynergyGuidePanel" parent="." instance=ExtResource("4")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1612.0
offset_top = -338.0
offset_right = 1892.0
offset_bottom = -138.0
grow_vertical = 0

[node name="ClearGridButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1261.0
offset_top = 1008.0
offset_right = 1411.0
offset_bottom = 1058.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_clear_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_clear_hover")
text = "CLEAR GRID"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 363.0
offset_top = 1007.0
offset_right = 488.0
offset_bottom = 1057.0
theme_override_font_sizes/font_size = 18
text = "SAVE"

[node name="LoadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 505.0
offset_top = 1007.0
offset_right = 630.0
offset_bottom = 1057.0
theme_override_font_sizes/font_size = 18
text = "LOAD"

[node name="AutoFillButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1091.0
offset_top = 1007.0
offset_right = 1241.0
offset_bottom = 1057.0
theme_override_font_sizes/font_size = 18
text = "AUTO-FILL"

[node name="EnemySetupButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -75.0
offset_right = -140.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "ENEMY SETUP"

[node name="LaunchButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -183.0
offset_top = -75.0
offset_right = -33.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_launch_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_launch_hover")
theme_override_styles/disabled = SubResource("StyleBoxFlat_launch_disabled")
disabled = true
text = "LAUNCH"

[node name="ShipGrid" type="Node2D" parent="."]
position = Vector2(960, 540)
script = ExtResource("1_grid")

[node name="PowerLinesContainer" type="Node2D" parent="ShipGrid"]
z_index = -1

[node name="GridContainer" type="Node2D" parent="ShipGrid"]
position = Vector2(0, 2)

[node name="SynergyContainer" type="Node2D" parent="ShipGrid"]
z_index = 1
position = Vector2(0, 2)

[node name="CoverageContainer" type="Node2D" parent="ShipGrid"]

[node name="CostIndicator" type="Label" parent="."]
visible = false
z_index = 100
layout_mode = 0
offset_right = 60.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "+3"

[node name="TemplateNameDialog" parent="." instance=ExtResource("5_template_name")]
layout_mode = 1

[node name="TemplateListPanel" parent="." instance=ExtResource("6_template_list")]
layout_mode = 1

[node name="EnemySetupPanel" parent="." instance=ExtResource("9_enemy_setup")]
layout_mode = 1
